Implement fetching all products from Firebase

--- a/src/app/inventory/products/products.component.html
+++ b/src/app/inventory/products/products.component.html
@@ -1,6 +1,6 @@
 <div class="bg-white rounded-lg shadow-lg p-4 mb-4">
   <div class="mb-4  h-52 w-52">
-    <img src="{{product.image}}" alt="{{product.name}}" class="object-cover h-48 w-96 rounded-md">
+    <img [src]="product.imageUrl" alt="{{product.name}}" class="object-cover h-48 w-96 rounded-md">
   </div>
 
   <p class="text-gray-600 text-sm">Product Number {{product.id}}</p>
