--- a/src/app/inventory/inventory.component.html
+++ b/src/app/inventory/inventory.component.html
@@ -11,7 +11,7 @@
       </div>
     </div>
 
-    <div *ngIf="formVisibility && !loading">
+    <div *ngIf="formVisibility && !loadingForAddingProduct">
       <div *ngIf=" error " class="flex justify-center items-center text-2xl text-red-500">
         <p>{{error}}</p>
       </div>
@@ -22,7 +22,7 @@
     </div>
 
 
-    <div *ngIf="loading && formVisibility" class="flex justify-center items-center">
+    <div *ngIf="loadingForAddingProduct && formVisibility" class="flex justify-center items-center">
       <app-circle-loading></app-circle-loading>
 
     </div>
@@ -31,8 +31,8 @@
   <div class="my-4 flex flex-wrap gap-6 justify-center sm:justify-start items-center">
     <div *ngFor="let pro of products">
       <app-products [product]="pro"></app-products>
-
     </div>
+
   </div>
 
 </div>
