Implement fetching all products and save them in indexedDB database ,and access them when offline

--- a/src/app/inventory/products/products.component.html
+++ b/src/app/inventory/products/products.component.html
@@ -3,7 +3,7 @@
     <img [src]="product.imageUrl" alt="{{product.name}}" class="object-cover h-48 w-96 rounded-md">
   </div>
 
-  <p class="text-gray-600 text-sm">Product Number {{product.id}}</p>
+  <p class="text-gray-600 text-sm">Product Number {{product.key}}</p>
   <p class="text-lg font-semibold mb-2">{{product.name}}</p>
   <p class="text-gray-600">Quantity: {{product.quantity}}</p>
   <p class="text-gray-600">Base Price: {{product.basePrice}} Dinar</p>
