--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="flex items-center justify-center p-8">
   <div class="flex flex-col items-center">
     <p class="text-6xl mb-6">WELCOME <span class="text-orange-500">User .... </span></p>
+    <p>your app is on version 4</p>
   </div>
 </div>
