Implement fixing data that has error

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,6 +13,11 @@
        class=" bg-gray-600 rounded-md py-2.5 px-5 text-white">
       sell
     </a>
+    <a [routerLink]="['admin','error-data']"
+       class=" bg-gray-600 rounded-md py-2.5 px-5 text-white">
+      error data
+    </a>
+    1
   </nav>
 
 </div>
