Implement syncing sold products

--- a/src/app/sell/sold-products/sold-products.component.html
+++ b/src/app/sell/sold-products/sold-products.component.html
@@ -1,6 +1,6 @@
 <div class="bg-white rounded-lg shadow-lg p-4 mb-4 flex">
   <div class="mr-4  h-20 w-20">
-    <img src="{{product.image}}" alt="{{product.name}}" class="object-cover h-20 w-20 rounded-md">
+    <img src="{{product.imageUrl}}" alt="{{product.name}}" class="object-cover h-20 w-20 rounded-md">
   </div>
 
   <div class="flex gap-4 items-center">
