--- a/src/app/sell/available-products/available-products.component.html
+++ b/src/app/sell/available-products/available-products.component.html
@@ -1,6 +1,6 @@
 <div class="bg-white rounded-lg shadow-lg p-4 mb-4 flex flex-col justify-center items-center w-52 ">
   <div class="mb-4  h-40 w-40">
-    <img src="{{product.image}}" alt="{{product.name}}" class="object-cover h-40 w-40 rounded-md">
+    <img src="{{product.imageUrl}}" alt="{{product.name}}" class="object-cover h-40 w-40 rounded-md">
   </div>
 
 
